--- a/views/index.jade
+++ b/views/index.jade
@@ -15,4 +15,4 @@ block content
         a(href=prop)= prop + " -> " + val
 
 block scripts
-  script(src='/scripts/index.html.css')
+  script(src='/scripts/index.html.js')
