--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,4 +8,5 @@ html
     script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.3.1/lodash.min.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/bacon.js/0.7.53/Bacon.min.js')
     block scripts
